Include raw data in repo for reproducibility

--- a/templates/config.ini
+++ b/templates/config.ini
@@ -1,7 +1,7 @@
 [paths]
 model_dir = '/path/to/model/model_path'
 model = 'N7b_[M+H]'
-data = 'combined_[M+H]_darkchem_benzenoids.csv'
+data = 'data/combined_[M+H]_darkchem_benzenoids.csv'
 
 [parameters]
 max_smiles_length = 20
